PAE-4: Fixed text overflow

--- a/src/Modules/Manage/Dnn.PersonaBar.Users/Users.Web/src/_exportables/src/components/UserTable/style.less
+++ b/src/Modules/Manage/Dnn.PersonaBar.Users/Users.Web/src/_exportables/src/components/UserTable/style.less
@@ -1,5 +1,6 @@
 :local(.usersList) {
     .dnn-grid-cell {
+        overflow-wrap: break-word;
         &.no-users {
             float: left;
             width: 100%;
